# autonomous-dev-agent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  TODO.md  pyproject.toml  spec.md
.claude/: settings.json
.claude/agents/: architect.md  coder.md  documenter.md  qa.md  qc.md  reviewer.md  tester.md
.claude/skills/code-standards/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/project-architecture/: SKILL.md
.claude/skills/rag-search/: SKILL.md
.claude/skills/testing-strategy/: SKILL.md
Formula/: autonomous-dev-agent.rb
config/: default.yaml
docs/: contributing.md  qa-qc-report.md  tui-testing-guide.md
docs/api/: README.md  agents.md  orchestrator.md  rag.md  utils.md
docs/api/modules/: chunker.md  embedder.md  hybrid_search.md  incremental_indexer.md  mcp_server.md  scorer.md  vector_store.md
docs/architecture/: agent-routing.md  agent-teams-usage.md  data-model.md  design-decisions.md  overview.md
docs/phase1/: README.md  api.md  architecture.md  performance.md  qc-report.md
docs/setup/: deployment.md  development.md
scripts/: install.sh  run.sh  setup.sh  uninstall.sh
src/: __init__.py  cli.py
src/agents/: __init__.py  executor.py  verifier.py
src/core/: domain.py  exceptions.py  interfaces.py
src/infra/: claude_client.py  config.py  events.py  logger.py  state.py
src/orchestrator/: __init__.py  issue_classifier.py  main.py  planner.py  spec_builder.py  token_manager.py
src/rag/: __init__.py  chunker.py  embedder.py  hybrid_search.py  incremental_indexer.py  indexer.py  mcp_server.py  scorer.py  vector_store.py
src/ui/tui/: __main__.py  app.py
src/utils/: __init__.py  claude_client.py  config.py  events.py  logger.py  state.py
tests/: conftest.py  test_chunker.py  test_claude_client.py  test_cli.py  test_config.py  test_embedder.py  test_events.py  test_executor.py  test_hybrid_search.py  test_incremental_indexer.py  test_indexer.py  test_issue_classifier.py  test_main.py  test_mcp_server.py  test_planner.py  test_scorer.py  test_spec_builder.py  test_state.py  test_token_manager.py  test_tui.py  test_vector_store.py  test_verifier.py
tests/e2e/: phase1_integration_report.md  test_phase1_integration.py
tests/qa/: generate_e2e_cases.py  report.json  run_e2e_qa.py
tests/qc/: generate_embedder_cases.py  generate_hybrid_search_cases.py  generate_incremental_indexer_cases.py  generate_mcp_server_cases.py  generate_module_cases.py  generate_scorer_cases.py  generate_vector_store_cases.py  run_embedder_qc.py  run_hybrid_search_qc.py  run_incremental_indexer_qc.py  run_mcp_server_qc.py  run_module_qc.py  run_scorer_qc.py  run_vector_store_qc.py  run_vector_store_qc_v2.py  summarize.py
tests/qc/chunker/: report.json
tests/qc/embedder/: report.json
tests/qc/hybrid_search/: report.json
tests/qc/incremental_indexer/: report.json
tests/qc/mcp_server/: report.json
tests/qc/scorer/: report.json
tests/qc/vector_store/: report.json
