[project]
name = "autonomous-dev-agent"
version = "0.1.0"
description = "Claude Code Skills + RAG 연동 자율 개발 에이전트"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "textual>=0.80.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/ui/*",      # TUI/Web UI는 프레임워크 실행 필요 → 단위 테스트 제외
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
